repair overflow in main.css

--- a/src/styles/Main.css
+++ b/src/styles/Main.css
@@ -1,3 +1,6 @@
+main{
+  overflow-x: hidden;
+} 
 main p{
   font-size: 30px;
   padding: 0 40px;
